Redone upgrades + reload Advancements fix